[package]
name = "parquet_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "*",features = ["parquet","lazy","dtype-categorical"]}
getopts = {version = "*"}
smartstring ={ version = "*"}
uuid = { version = "*", features = ["v4"] }

